# mfrc522

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
ci/: script.sh
examples/: rpi.rs  serial.rs
src/: lib.rs  picc.rs
src/interface/: mod.rs  serial.rs  spi.rs
