[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the MFRC522 (RFID reader/writer)"
documentation = "https://docs.rs/mfrc522"
keywords = ["embedded-hal", "rfid"]
license = "MIT OR Apache-2.0"
name = "mfrc522"
repository = "https://github.com/japaric/mfrc522"
version = "0.2.0"

[dependencies]
embedded-hal =  "0.2.0"
generic-array = "0.11.0"
